# vfs_nodes-rs

./: .editorconfig  .gitignore  Cargo.toml
.run/: Build Dynamic.run.xml  Example Full - Dynamic.run.xml  Example Full - async_std.run.xml  Example Full - tokio.run.xml  Example Full.run.xml  Test - All Features.run.xml  Test Dynamic.run.xml  Test.run.xml
examples/: full_async_std.rs  full_tokio.rs
examples/full/: main.rs  mod.rs
src/: as_any_cast.rs  bevy.rs  lib.rs  node.rs  scheme.rs
src/errors/: mod.rs  node.rs  scheme.rs  vfs.rs
src/nodes/: directory.rs  file_system.rs  mod.rs  noop.rs  overlay.rs  path_trie.rs  symlink.rs
src/nodes/file_system/: directory.rs  file.rs  mod.rs
src/schemes/: data_loader.rs  embedded.rs  filesystem.rs  memory.rs  mod.rs  overlay.rs  symlink.rs
src/schemes/filesystem/: async_std.rs  filesystem_async_std.rs  filesystem_tokio.rs  mod.rs  tokio.rs
