[package]
name = "vfs_nodes"
version = "0.1.0"
authors = ["OvermindDL1 <overminddl1@gmail.com>"]
edition = "2018"

[dependencies]
url = "2.2"
base64 = "0.13"
percent-encoding = "2.1"
futures-io = "0.3.15"
tokio = { version = "1.5", features = ["rt", "fs", "net", "io-util", "process", "macros"], optional = true }
tokio-util = { version = "0.6.7", features = ["compat"], optional = true }
async-trait = "0.1.50"
#async-compression = { version = "0.3.8", features = ["tokio", "gzip", "deflate"] }
#bevy_app = { version = "0.5", optional = true }
#bevy_ecs = { version = "0.5", optional = true }

[features]
async-tokio = ["tokio", "tokio-util"]
async-executor = []
#bevy = ["bevy_app", "bevy_ecs"]
